--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -16,9 +16,9 @@
     }
 
     &__nav-list {
-        width: 175px;
+        min-width: 175px;
         margin: 0;
-        padding: 0.125rem 0.5rem;
+        padding: 0.25rem 0.5rem;
         list-style: none;
         display: flex;
         justify-content: space-evenly;
@@ -29,21 +29,27 @@
     }
 
     &__nav-item {
+        @include bodyCopy;
+        font-weight: 400;
+        font-size: 10px;
         margin: 0;
+        
     }
 
     &__nav-link {
-        @include bodyCopy;
         text-decoration: none;
-        font-size: 10px;
     }
 
     &__light-dark-toggle {
-        width: 15px;
-        height: 15px;
+        width: 20px;
+        height: 20px;
         position: absolute;
-        right: 0;
+        right: 1.0rem;
         top: 1.0rem;
-        
+        background-color: white;
+        border: 0.5px solid lightgray;
+        border-radius: 50%;
+        box-shadow: 0 0 10px 1px lightgray;
+        padding: 0.25rem;
     }
 }
