--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -8,6 +8,15 @@
     position: relative;
     padding: 1.0rem;
 
+    &__profile-img {
+        width: 25px;
+        // height: 20px;
+        border-radius: 50%;
+        position: absolute;
+        left: 1.0rem;
+        top: 1.0rem;
+    }
+
     &__nav {
         width: 100%;
         display: flex;
