--- a/src/components/MainHero/MainHero.scss
+++ b/src/components/MainHero/MainHero.scss
@@ -5,6 +5,14 @@
 .main-hero {
     @include mainSection;
 
+    &__profile-img {
+        width: 50px;
+        border-radius: 50%;
+        // position: absolute;
+        // left: 1.0rem;
+        // top: 1.0rem;
+    }
+
     &__title {
         @include pageTitle;
         margin: 1.0rem 0;
@@ -13,5 +21,16 @@
     &__intro {
         @include bodyCopy;
         line-height: 1.25rem;
+    }
+
+    &__social-icons {
+        width: 40%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__social-icon {
+        width: 15px;
+        margin: 1.0rem 0;
     }
 }
