--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -2,9 +2,10 @@
 @use "./variables";
 
 @mixin mainSection {
-    width: 100vw;
+    width: 100%;
     margin: 0;
     padding: 1.0rem;
+    background-color: white;
 }
 
 @mixin pageTitle {
