Add techStack and problem to ProjectDetails interface, and use in ProjectHero component

--- a/src/pages/ProjectPage/ProjectPage.scss
+++ b/src/pages/ProjectPage/ProjectPage.scss
@@ -41,4 +41,12 @@
         width: 32%;
         
     }
+
+    &__problem-header {
+        @include pageTitle;
+    }
+
+    &__problem-description {
+        @include bodyCopy;
+    }
 }
