Add initial styling for YouTubeEmbed. Add CallToAction to ProjectPage

--- a/src/pages/ProjectPage/ProjectPage.scss
+++ b/src/pages/ProjectPage/ProjectPage.scss
@@ -47,7 +47,7 @@
         font-weight: 300;
     }
 
-    &__problem-header {
+    &__header {
         @include pageTitle;
         padding: 1.0rem 0;
     }
