--- a/src/components/YouTubeEmbed/YouTubeEmbed.scss
+++ b/src/components/YouTubeEmbed/YouTubeEmbed.scss
@@ -1,3 +1,19 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/typography" as *;
+
+.video-responsive {
+    overflow: hidden;
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+
+    &__video {
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        
+    }
+}
