Add color variables to variables.scss. Update body background color to gradient

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,5 +14,5 @@ html, body {
 
 body {
   padding: 0 0.75rem;
-  background-color: bisque;
+  background: linear-gradient($primary-four-blue, $primary-two-pink, $primary-five-lightblue);
 }
