Add background gradient to Projects cards, update color of social icons

--- a/src/components/MainHero/MainHero.scss
+++ b/src/components/MainHero/MainHero.scss
@@ -35,5 +35,9 @@
     &__social-icon {
         width: 15px;
         margin: 1.0rem 0;
+
+        &:hover {
+            transform:scale(1.1);
+        }
     }
 }
