--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -3,8 +3,12 @@
 @use "../../styles/partials/typography" as *;
 
 .page-header {
-    @include mainSection;
-    position: relative;
+    margin: 1.0rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: sticky;
+    top: 1.0rem;
 
     &__nav {
         width: 100%;
@@ -22,11 +26,11 @@
         justify-content: space-evenly;
         align-items: center;
         border-radius: 20px;
-        border: 0.5px solid lightgray;
-        box-shadow: 0 0 10px 1px lightgray;
-        background-color: white;
-        position: fixed;
-        top: 1.0rem;
+        border: 0.5px solid $primary-six-grey;
+        box-shadow: 0 0 10px 1px $primary-six-grey;
+        background-color: $primary-seven-white;
+        // position: sticky;
+        // top: 1.0rem;
         // z-index: 1;
     }
 
@@ -42,16 +46,16 @@
         text-decoration: none;
     }
 
-    &__light-dark-toggle {
-        width: 20px;
-        height: 20px;
-        position: fixed;
-        right: 1.5rem;
-        top: 1.0rem;
-        background-color: white;
-        border: 0.5px solid lightgray;
-        border-radius: 50%;
-        box-shadow: 0 0 10px 1px lightgray;
-        padding: 0.25rem;
-    }
+    // &__light-dark-toggle {
+    //     width: 20px;
+    //     height: 20px;
+    //     position: fixed;
+    //     right: 1.5rem;
+    //     top: 1.0rem;
+    //     background-color: white;
+    //     border: 0.5px solid lightgray;
+    //     border-radius: 50%;
+    //     box-shadow: 0 0 10px 1px lightgray;
+    //     padding: 0.25rem;
+    // }
 }
