--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1,11 +1,12 @@
-@use "./typography";
-@use "./variables";
+@use "./typography" as *;
+@use "./variables" as *;
 
 @mixin mainSection {
     width: 100%;
     margin: 0;
     padding: 1.0rem;
-    background-color: white;
+    border-radius: 5px;
+    background-color: $primary-seven-white;
 }
 
 @mixin pageTitle {
