Add signature logo to PageHeader

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -6,3 +6,4 @@ $primary-four-blue: #8296ea;
 $primary-five-lightblue: #aebdf1;
 $primary-six-grey: #dde3f9;
 $primary-seven-white: #f6f8fe;
+$primary-eight-black: #2f2d2e;
