--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -10,6 +10,14 @@
     position: sticky;
     top: 1.0rem;
 
+    &__logo {
+        width: 70px;
+        position: absolute;
+        top: -0.6rem;
+        left: 0;
+        transform: rotate(345deg);
+    }
+
     &__nav {
         width: 100%;
         display: flex;
