--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -14,7 +14,7 @@
     font-family: "Mona Sans";
     font-size: 24px;
     font-weight: 700;
-    color: black;
+    color: $primary-one-orange;
 }
 
 @mixin pageSubtitle {
@@ -22,7 +22,7 @@
     font-family: "Mona Sans";
     font-size: 12px;
     font-weight: 400;
-    color: gray;
+    color: $primary-six-grey;
 }
 
 @mixin bodyCopy {
@@ -30,5 +30,5 @@
     font-family: "Mona Sans";
     font-size: 11px;
     font-weight: 200;
-    color: black;
+    color: $primary-eight-black;
 }
