Increase spacing around MainHero

--- a/src/components/MainHero/MainHero.scss
+++ b/src/components/MainHero/MainHero.scss
@@ -3,7 +3,7 @@
 @use "../../styles/partials/typography" as *;
 
 .main-hero {
-    padding-top: 2.0rem;
+    padding: 3.0rem 0 2.0rem;
 
     &__profile-img {
         width: 60px;
