--- a/src/components/TechStack/TechStack.scss
+++ b/src/components/TechStack/TechStack.scss
@@ -7,6 +7,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    padding-bottom: 2.0rem;
 
 
     &__tech-logo {
@@ -16,12 +17,8 @@
         &--img {
             max-width: 100%;
             max-height: 60px;
-            // filter: grayscale(100%);
+            filter: saturate(80%);
 
-            // &:hover {
-            //     filter: none;
-            // }
-            
         }
     }
     
