--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -3,19 +3,25 @@
 @use "../../styles/partials/typography" as *;
 
 .projects {
+    padding-bottom: 1.0rem;
 
     &__link {
         text-decoration: none;
     }
 
     &__card {
-        margin: 1.0rem;
+        margin: 1.5rem 1.0rem;
         padding: 1.0rem;
         background: radial-gradient($primary-two-pink, $primary-five-lightblue);
         border-radius: 10px;
         display: flex;
         flex-direction: column;
         align-items: center;
+        transition: translate 0.5s;
+
+        &:hover {
+            translate: 0 -20px;
+        }
     }
 
     &__card-subtitle {
