--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -7,8 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: sticky;
-    top: 1.0rem;
+    position: relative;
 
     &__logo {
         width: 70px;
