--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,7 @@ html, body {
 }
 
 body {
+  min-height: 100vh;
   padding: 0 0.75rem;
   background: linear-gradient($primary-four-blue, $primary-two-pink, $primary-five-lightblue);
 }
