--- a/src/pages/AboutPage/AboutPage.scss
+++ b/src/pages/AboutPage/AboutPage.scss
@@ -4,4 +4,32 @@
 
 .about-page {
     @include mainSection;
+
+    &__title {
+        @include pageTitle;
+        padding: 3.0rem 0 1.5rem;
+    }
+
+    &__description {
+        @include bodyCopy;
+        line-height: 1.25;
+        margin: 1.0rem 0;
+        padding: 0 0.5rem;
+    }
+
+    &__profile-card {
+        display: flex;
+        align-items: center;
+        padding: 3.0rem 0;
+    }
+
+    &__profile-img {
+        width: 75px;
+        border-radius: 50%;
+        margin-right: 0.5rem;
+    }
+
+    &__signature {
+        width: 120px
+    }
 }
