--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -27,6 +27,7 @@
 
 @mixin bodyCopy {
     margin: 0;
+    line-height: 1.5;
     font-family: "Mona Sans";
     font-size: 11px;
     font-weight: 200;
