--- a/src/components/YouTubeEmbed/YouTubeEmbed.scss
+++ b/src/components/YouTubeEmbed/YouTubeEmbed.scss
@@ -7,6 +7,7 @@
     position: relative;
     padding-bottom: 56.25%;
     height: 0;
+    margin-bottom: 2.0rem;
 
     &__video {
         position: absolute;
