--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -7,3 +7,8 @@ $primary-five-lightblue: #aebdf1;
 $primary-six-grey: #dde3f9;
 $primary-seven-white: #f6f8fe;
 $primary-eight-black: #2f2d2e;
+
+
+// BREAKPOINTS
+$tablet: 768px;
+$desktop: 1280px;
