--- a/src/pages/AboutPage/AboutPage.scss
+++ b/src/pages/AboutPage/AboutPage.scss
@@ -8,12 +8,21 @@
     &__title {
         @include pageTitle;
         padding: 3.0rem 0 1.5rem;
+
+        @include tablet {
+            padding: 4.0rem 0 2.0rem;
+        }
     }
 
     &__description {
         @include bodyCopy;
         margin: 1.0rem 0;
         padding: 0 0.5rem;
+
+        @include tablet {
+            margin: 1.5rem 0;
+            padding: 0 1.5rem;
+        }
     }
 
     &__profile-card {
@@ -26,10 +35,19 @@
         width: 75px;
         border-radius: 50%;
         margin-right: 0.5rem;
+
+        @include tablet {
+            width: 100px;
+            margin-right: 0.75rem;
+        }
     }
 
     &__signature {
-        width: 120px
+        width: 120px;
+
+        @include tablet {
+            width: 140px;
+        }
     }
 
     &__link {
