--- a/src/pages/ContactPage/ContactPage.scss
+++ b/src/pages/ContactPage/ContactPage.scss
@@ -8,6 +8,10 @@
     &__title {
         @include pageTitle;
         padding: 3.0rem 0 1.5rem;
+
+        @include tablet {
+            padding: 4.0rem 0 2.0rem;
+        }
     }
 
     &__connect-wrapper {
@@ -16,6 +20,10 @@
         flex-wrap: wrap;
         justify-content: space-evenly;
         align-items: center;
+
+        @include tablet {
+            width: 60%;
+        }
     }
 
     &__connect-link {
