--- a/src/components/TechStack/TechStack.scss
+++ b/src/components/TechStack/TechStack.scss
@@ -22,6 +22,14 @@
         width: 23%;
         text-align: center;
 
+        @include tablet {
+            width: 15%;
+        }
+
+        @include desktop {
+            width: 15%;
+        }
+
         &--img {
             max-width: 100%;
             max-height: 60px;
