--- a/src/components/CallToAction/CallToAction.scss
+++ b/src/components/CallToAction/CallToAction.scss
@@ -16,6 +16,11 @@
         height: 100vh;
     }
 
+    @include desktop {
+        padding: 4.0rem 0;
+        height: 100vh;
+    }
+
     &__title {
         @include pageTitle;
         color: $primary-seven-white;
@@ -27,6 +32,11 @@
             width: 75%;
             font-size: 36px;
         }
+
+        @include desktop {
+            width: 75%;
+            font-size: 44px;
+        }
     }
 
     &__description {
@@ -35,6 +45,10 @@
         @include tablet {
             font-size: 18px;
         }
+
+        @include desktop {
+            font-size: 20px;
+        }
     }
 
     &__message-link {
@@ -42,6 +56,10 @@
 
         @include tablet {
             font-size: 18px;
+        }
+
+        @include desktop {
+            font-size: 20px;
         }
 
         &:hover {
