--- a/src/components/YouTubeEmbed/YouTubeEmbed.scss
+++ b/src/components/YouTubeEmbed/YouTubeEmbed.scss
@@ -9,6 +9,10 @@
     height: 0;
     margin-bottom: 2.0rem;
 
+    @include desktop {
+        margin-bottom: 3.0rem;
+    }
+
     &__video {
         position: absolute;
         left: 0;
