--- a/src/components/CallToAction/CallToAction.scss
+++ b/src/components/CallToAction/CallToAction.scss
@@ -29,13 +29,13 @@
         padding-bottom: 1.0rem;
 
         @include tablet {
-            width: 75%;
-            font-size: 36px;
+            max-width: 575px;
+            font-size: 42px;
         }
 
         @include desktop {
-            width: 75%;
-            font-size: 44px;
+            max-width: 750px;
+            font-size: 48px;
         }
     }
 
@@ -43,23 +43,24 @@
         @include bodyCopy;
 
         @include tablet {
-            font-size: 18px;
+            font-size: 24px;
         }
 
         @include desktop {
-            font-size: 20px;
+            font-size: 28px;
         }
+
     }
 
     &__message-link {
         @include bodyCopy;
 
         @include tablet {
-            font-size: 18px;
+            font-size: 24px;
         }
 
         @include desktop {
-            font-size: 20px;
+            font-size: 28px;
         }
 
         &:hover {
