--- a/src/pages/AboutPage/AboutPage.scss
+++ b/src/pages/AboutPage/AboutPage.scss
@@ -24,12 +24,14 @@
         padding: 0 0.5rem;
 
         @include tablet {
-            margin: 1.5rem 0;
+            max-width: 70vw;
+            margin: 1.5rem auto;
             padding: 0 1.5rem;
         }
 
         @include desktop {
-            margin: 1.5rem 0;
+            max-width: 70vw;
+            margin: 1.5rem auto;
             padding: 0 3.0rem;
         }
     }
