feat: refactor pageheader, adjust main-hero

--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -3,7 +3,7 @@
 
 //BREAKPOINTS
 @mixin tablet {
-    @media (min-width: $tablet) and (max-width: 1279px) {
+    @media (min-width: $tablet) {
         @content;
     }
 }
