--- a/src/App.scss
+++ b/src/App.scss
@@ -14,14 +14,14 @@ html, body {
 
 body {
   min-height: 100vh;
-  padding: 0 0.75rem;
+  padding: 0.75rem 0.75rem 0;
   background: linear-gradient($primary-four-blue, $primary-two-pink, $primary-five-lightblue);
 
   @include tablet {
-    padding: 0 1.5rem;
+    padding: 1.5rem 1.5rem 0;
   }
 
   @include desktop {
-    padding: 0 3.0rem;
+    padding: 3.0rem 3.0rem 0;
   }
 }
