--- a/src/components/MainHero/MainHero.scss
+++ b/src/components/MainHero/MainHero.scss
@@ -3,21 +3,21 @@
 @use "../../styles/partials/typography" as *;
 
 .main-hero {
-    padding: 3.0rem 0 2.0rem;
+    padding: 4.0rem 0 2.0rem;
     display: flex;
     flex-direction: column;
 
     @include tablet {
-        max-width: 60vw;
-        padding: 4.0rem 0 3.0rem;
-        margin-left: 1.0rem;
+        padding: 6.0rem 0 3.0rem;
+        width: 90%;
+        flex-direction: row;
+        align-items: flex-start;
     }
 
     @include desktop {
-        padding: 5.0rem 0 3.0rem;
+        padding: 8.0rem 0 3.0rem;
         width: 80%;
-        flex-direction: row;
-        align-items: flex-start;
+
     }
 
     &__profile-img {
@@ -37,7 +37,7 @@
         display: flex;
         flex-direction: column;
 
-        @include desktop {
+        @include tablet {
             padding-left: 1.5rem;
         }
     }
