--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -3,49 +3,34 @@
 @use "../../styles/partials/typography" as *;
 
 .page-header {
-    margin: 1.5rem 0;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-
-    @include tablet {
-        margin: 2.0rem 0;
-    }
-
-    @include desktop {
-        margin: 2.5rem 0;
-    }
-
-    &__logo {
-        width: 65px;
-        position: absolute;
-        top: -0.3rem;
-        left: 0;
-        transform: rotate(345deg);
-
-        @include tablet {
-            width: 120px;
-            top: -1.0rem;
-        }
-
-        @include desktop {
-            width: 140px;
-            top: -1.4rem;
-        }
-    }
 
     &__nav {
         width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
+        position: fixed;
+        top: 1.5rem;
+        z-index: 999999;
+
+        @include tablet {
+            top: 3.0rem;
+        }
+
+        @include desktop {
+            top: 6.0rem;
+        }
     }
 
     &__nav-list {
+        width: 50vw;
         min-width: 190px;
         margin: 0;
-        padding: 0.25rem 0.5rem;
+        padding: 0.65rem;
         list-style: none;
         display: flex;
         justify-content: space-evenly;
@@ -56,12 +41,10 @@
 
         @include tablet {
             width: 50vw;
-            padding: 0.5rem 0.75rem;
         }
 
         @include desktop {
             width: 60vw;
-            padding: 0.5rem 1.5rem;
         }
       
     }
@@ -74,6 +57,10 @@
 
         &:hover {
             color: $primary-four-blue;
+        }
+
+        &--active {
+            color: $primary-five-lightblue;
         }
         
     }
