--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -22,7 +22,7 @@
     &__card {
         margin: 1.5rem 1.0rem;
         padding: 1.0rem;
-        background: radial-gradient($primary-two-pink, $primary-five-lightblue);
+        background: radial-gradient($secondary-background, $tertiary-background-light);
         border-radius: 10px;
         display: flex;
         flex-direction: column;
