--- a/src/pages/AboutPage/AboutPage.scss
+++ b/src/pages/AboutPage/AboutPage.scss
@@ -72,10 +72,10 @@
 
     &__link {
         text-decoration: none;
-        color: $primary-four-blue;
+        color: $tertiary-background-dark;
 
         &:hover {
-            color: $primary-eight-black;
+            color: $primary-dark;
         }
     }
 }
