--- a/src/components/CallToAction/CallToAction.scss
+++ b/src/components/CallToAction/CallToAction.scss
@@ -23,7 +23,7 @@
 
     &__title {
         @include pageTitle;
-        color: $primary-seven-white;
+        color: $primary-light;
         font-size: 22px;
         text-align: center;
         padding-bottom: 1.0rem;
@@ -64,7 +64,7 @@
         }
 
         &:hover {
-            color: $primary-four-blue;
+            color: $tertiary-background-dark;
         }
     }
 }
