--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,13 +1,23 @@
 // COLORS
-$primary-one-orange: #de5f54;
-$primary-two-pink: #c75ab4;
-$primary-three-purple: #a364d0;
-$primary-four-blue: #8296ea;
-$primary-five-lightblue: #aebdf1;
-$primary-six-grey: #dde3f9;
-$primary-seven-white: #f6f8fe;
-$primary-eight-black: #2f2d2e;
+// $primary-accent: #de5f54;
+// $secondary-background: #c75ab4;
+// $primary-background: #a364d0;
+// $tertiary-background-dark: #8296ea;
+// $tertiary-background-light: #aebdf1;
+// $secondary-light: #dde3f9;
+// $primary-light: #f6f8fe;
+// $primary-dark: #2f2d2e;
 
+
+$primary-accent: #de5f54;
+$secondary-background: #00264f;
+$primary-background: #001933;
+$tertiary-background-dark: #002c5c;
+$tertiary-background-light: #00346b;
+
+$secondary-light: #dde3f9;
+$primary-light: #f6f8fe;
+$primary-dark: #001021;
 
 // BREAKPOINTS
 $tablet: 768px;
