--- a/src/pages/ProjectPage/ProjectPage.scss
+++ b/src/pages/ProjectPage/ProjectPage.scss
@@ -30,7 +30,7 @@
         @include bodyCopy;
 
         &:hover {
-            color: $tertiary-background-dark;
+            color: $secondary-dark;
         }
     }
 }
