--- a/src/components/CallToAction/CallToAction.scss
+++ b/src/components/CallToAction/CallToAction.scss
@@ -64,7 +64,7 @@
         }
 
         &:hover {
-            color: $tertiary-background-dark;
+            color: $secondary-dark;
         }
     }
 }
