--- a/src/pages/AboutPage/AboutPage.scss
+++ b/src/pages/AboutPage/AboutPage.scss
@@ -72,7 +72,7 @@
 
     &__link {
         text-decoration: none;
-        color: $tertiary-background-dark;
+        color: $secondary-dark;
 
         &:hover {
             color: $primary-dark;
