--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -2,22 +2,24 @@
 // $primary-accent: #de5f54;
 // $secondary-background: #c75ab4;
 // $primary-background: #a364d0;
-// $tertiary-background-dark: #8296ea;
-// $tertiary-background-light: #aebdf1;
+// $secondary-dark: #8296ea;
+// $tertiary-dark: #aebdf1;
 // $secondary-light: #dde3f9;
 // $primary-light: #f6f8fe;
 // $primary-dark: #2f2d2e;
 
 
-$primary-accent: #de5f54;
-$secondary-background: #00264f;
-$primary-background: #001933;
-$tertiary-background-dark: #002c5c;
-$tertiary-background-light: #00346b;
-
-$secondary-light: #dde3f9;
 $primary-light: #f6f8fe;
+$secondary-light: #dde3f9;
+
 $primary-dark: #001021;
+$secondary-dark: #002c5c;
+$tertiary-dark: #00346b;
+
+$primary-background: #001933;
+$secondary-background: #00264f;
+
+$primary-accent: #de5f54;
 
 // BREAKPOINTS
 $tablet: 768px;
