chore: update accent color

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -19,7 +19,7 @@ $tertiary-dark: #00346b;
 $primary-background: #001933;
 $secondary-background: #00264f;
 
-$primary-accent: #de5f54;
+$primary-accent: #F15025;
 
 // BREAKPOINTS
 $tablet: 768px;
