--- a/src/App.scss
+++ b/src/App.scss
@@ -14,8 +14,8 @@ html, body {
 
 body {
   min-height: 100vh;
-  padding: 0.75rem 0.75rem 0;
-  background: linear-gradient($secondary-dark, $secondary-background, $tertiary-dark);
+  padding: 0.75rem 1.0rem 0;
+  background: linear-gradient($primary-background, $tertiary-dark, $secondary-background);
 
   @include tablet {
     padding: 1.5rem 1.5rem 0;
