--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -14,15 +14,15 @@
         justify-content: center;
         align-items: center;
         position: fixed;
-        top: 1.5rem;
+        top: 1.25rem;
         z-index: 999999;
 
         @include tablet {
-            top: 3.0rem;
+            top: 1.5rem;
         }
 
         @include desktop {
-            top: 6.0rem;
+            top: 2.0rem;
         }
     }
 
@@ -38,7 +38,7 @@
 
         &--blur {
             border-radius: 25px;
-            background-color: $secondary-light;
+            background-color: $tertiary-dark;
             backdrop-filter: blur(20px) saturate(1.7);
         }  
     }
