--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -58,7 +58,7 @@
         }
 
         &:hover {
-            color: $tertiary-dark;
+            color: $primary-accent;
         }
 
         // FIXME: need to calculate padding when active is applied
