--- a/src/App.scss
+++ b/src/App.scss
@@ -14,14 +14,14 @@ html, body {
 
 body {
   min-height: 100vh;
-  padding: 0.75rem 1.0rem 0;
+  padding: 0.75rem 0 0;
   background: linear-gradient($primary-background, $tertiary-dark, $secondary-background);
 
   @include tablet {
-    padding: 1.5rem 1.5rem 0;
+    padding: 1.5rem 0 0;
   }
 
   @include desktop {
-    padding: 3.0rem 3.0rem 0;
+    padding: 3.0rem 0 0;
   }
 }
