--- a/src/components/TechStack/TechStack.scss
+++ b/src/components/TechStack/TechStack.scss
@@ -7,14 +7,15 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 2.0rem;
+    padding: 1.5rem 1.0rem;
+    background-color: white;
 
     @include tablet {
-        padding: 0.5rem 0 2.5rem;
+        padding: 2.0rem 1.5rem;
     }
 
     @include desktop {
-        padding: 2.0rem 0 5.0rem;
+        padding: 4.0rem 3.0rem;
     }
 
 
