--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -9,7 +9,7 @@
 // $primary-dark: #2f2d2e;
 
 
-$primary-light: #f6f8fe;
+$primary-light: #86BBD8;
 $secondary-light: #dde3f9;
 
 $primary-dark: #001021;
@@ -20,6 +20,7 @@ $primary-background: #001933;
 $secondary-background: #00264f;
 
 $primary-accent: #de5f54;
+$secondary-accent: #119DA4;
 
 // BREAKPOINTS
 $tablet: 768px;
