feat: update body font color

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -22,7 +22,7 @@
     &__card {
         margin: 1.5rem 1.0rem;
         padding: 1.0rem;
-        background: radial-gradient($secondary-accent, $primary-light);
+        background: radial-gradient($secondary-accent, $tertiary-light);
         border-radius: 25px;
         display: flex;
         flex-direction: column;
