--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -9,8 +9,9 @@
 // $primary-dark: #2f2d2e;
 
 
-$primary-light: #86BBD8;
+$primary-light: #f6f8fe;
 $secondary-light: #dde3f9;
+$tertiary-light: #86BBD8;
 
 $primary-dark: #001021;
 $secondary-dark: #002c5c;
