--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -18,6 +18,15 @@
 @mixin mainSection {
     width: 100%;
     margin: 0;
+    padding: 0 2.0rem;
+
+    @include tablet {
+        padding: 0 2.5rem;
+    }
+
+    @include desktop {
+        padding: 0 3.5rem;
+    }
 }
 
 @mixin pageTitle {
