feat: add white signature to about page

--- a/src/pages/AboutPage/AboutPage.scss
+++ b/src/pages/AboutPage/AboutPage.scss
@@ -72,10 +72,10 @@
 
     &__link {
         text-decoration: none;
-        color: $secondary-dark;
+        color: $secondary-light;
 
         &:hover {
-            color: $primary-dark;
+            color: $primary-accent;
         }
     }
 }
